Fix horizontal scrolling because logo is too big

--- a/assets/800.css
+++ b/assets/800.css
@@ -19,6 +19,7 @@
 
 .logo {
     width: 450px;
+    max-width: 100%;
     height: 83px;
     background-image: url("logo.png");
     background-size: contain;
@@ -40,7 +41,7 @@
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    z-index: 100;
+    z-index: 5000;
     text-align: center;
     padding: 0;
 }
